--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Anton&family=Patrick+Hand&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -6,13 +7,14 @@
 .container{
     display: flex;
     align-items: center;
-    background-color: blue;
+    background-color: white;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     height: 150px;
     width: 450px;
     margin-top: 200px;
+    border: 15px solid black;
+    border-radius: 15px;
 
 }
 body{
@@ -25,9 +27,7 @@ body{
     align-items: center;
     margin-top: 30px;
 }
-.container-day
-.container-hour
-.container-minute
-.container-second{
-    margin-left: 100px;
+h3,h2{
+    margin-left: 30px;
+    font-family: 'Acme', sans-serif;
 }
